# p2d

./: CNAME  README.md  index.html
reasoning_lab/: .gitignore  README.md  pyproject.toml
reasoning_lab/evals/: answer_entailment.json  claim_correspondence.json  formal_entailment.json  kimi_v02_valence_migration.json
reasoning_lab/p2d_reasoning_lab/: __init__.py  answer_revision.py  budget.py  calibration.py  cli.py  closure.py  compiler.py  coverage.py  defeasible.py  dependence.py  evals.py  formal.py  identity.py  inquiry.py  interactions.py  jsonutil.py  migration.py  openrouter.py  pipeline.py  projection.py  reconstruct.py  v03_evals.py  validation.py  valuation.py  verdict.py
reasoning_lab/runs/20260723-kimi-k3-v02/: MORNING_HANDOFF.md  answer_audit.json  answer_audit_independent.json  answer_bundle.json  answer_bundle_reconstructed.json  answer_bundle_revised.json  argument_graph_completed.draft.json  argument_graph_completed.json  argument_graph_critic.json  argument_graph_reconstructed.json  argument_graph_repaired_critic.json  argument_graph_skeleton.json  claim_assessments.json  cost_ledger.jsonl  formal_validation_report.json  normalized_grounds.json  overnight_manifest.json  pipeline_error.txt  question_portfolio.json  reasoning_artifact_v03.json  (+3 more)
reasoning_lab/tests/: test_budget.py  test_calibration.py  test_compiler.py  test_coverage_dependence.py  test_defeasible_projection.py  test_formal.py  test_identity.py  test_inquiry_interactions.py  test_inquiry_pipeline.py  test_jsonutil.py  test_validation.py  test_valuation.py  test_verdict.py
(+64 files in other folders)
